option java_package = "com.app.empire.protocol.pb.player";
option java_outer_classname = "PlayerAttUpdateProto";

import "army/PropertyMsg.proto";

//单个角色属性的更新
message PlayerAttUpdateMsg {
	required int64 playerId = 1; //角色ID
	repeated PropertyMsg att = 2; //需要更新的属性

}